--- a/7.4/fpm/pool.d/ispconfig.conf
+++ b/7.4/fpm/pool.d/ispconfig.conf
@@ -1,6 +1,6 @@
 [ispconfig]
 
-listen = /var/lib/php8.1-fpm/ispconfig.sock
+listen = /var/lib/php7.4-fpm/ispconfig.sock
 listen.owner = ispconfig
 listen.group = ispconfig
 listen.mode = 0660
@@ -8,18 +8,18 @@ listen.mode = 0660
 user = ispconfig
 group = ispconfig
 
-pm = ondemand
-pm.max_children = 2
-pm.process_idle_timeout = 10
-pm.max_requests = 500
+;pm = ondemand
+;pm.max_children = 2
+;pm.process_idle_timeout = 10
+;pm.max_requests = 500
 
-;pm = dynamic
-;pm.max_children = 500
-;pm.start_servers = 2
-;pm.min_spare_servers = 1
-;pm.max_spare_servers = 5
+pm = dynamic
+pm.max_children = 5
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 5
 
-access.log = /var/log/php/php8.1-fpm.ispconfig.access.log
+access.log = /var/log/php/php7.4-fpm.ispconfig.access.log
 catch_workers_output = yes
 
 ;chroot = /var/www
@@ -30,7 +30,7 @@ php_admin_value[session.save_path] = /usr/local/ispconfig/interface/temp
 php_admin_flag[magic_quotes_gpc] = off
 
 php_flag[display_errors] = off
-php_admin_value[error_log] = /var/log/php/php8.1-fpm.ispconfig.error.log
+php_admin_value[error_log] = /var/log/php/php7.4-fpm.ispconfig.error.log
 php_admin_flag[log_errors] = on
 
 php_admin_value[memory_limit] = 256M
